# QEncoderVis

./: .gitignore  README.md  pyproject.toml
QEncoderVis_副本/client/src/: App.css  App.js  index.js
QEncoderVis_副本/client/src/Articles/: p1.jsx  top.jsx
QEncoderVis_副本/client/src/Components/: comp1.jsx  comp5.jsx
QEncoderVis_副本/client/src/Functions/: module_draw_2dplot.jsx  module_draw_performance.jsx
QEncoderVis_副本/server/: app.py
QEncoderVis_副本/server/Data/: Jiang_dataset.py
QEncoderVis_副本/server/functions/: detect_boundary.py
QEncoderVis_副本/server/routes/: get_original_data.py
client/: biome.json  eslint.config.js  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  configs.json  index.js
client/src/Articles/: footer.jsx  p1.jsx  top.jsx
client/src/Components/: comp1.jsx  comp2.jsx  comp3.jsx  comp4.jsx  comp5.jsx  comp6.jsx  comp7.jsx  data_flow_link.jsx  data_selector_panel.jsx  description.jsx  encoded_map_view.jsx  encoder_step_mapping_view.jsx  link.jsx  model_performance_view.jsx  original_data_view.jsx  quantum_circuit_view.jsx  quantum_state_distribution_view.jsx
client/src/Functions/: module_draw_2dplot.jsx  module_draw_performance.jsx
server/: app.py  requirements.txt
server/Data/: Jiang_dataset.py  dataset_0.csv  dataset_1.csv  dataset_2.csv  dataset_3.csv  dataset_4.csv  dataset_5.csv
server/cache/: encoder_RzzRyyCnot_circuit_5_lr_0.020_epoch_100.pkl
server/functions/: detect_boundary.py  dim_reduction.py  draw_cost_and_acc_plot.py  encoding.py  feature_mapping.py  get_original_data.py  utils.py
server/routes/: accuracy.py  ansatz.py  cost.py  get_original_data.py  hyperparameters.py  run_Jiang_dataset.py  run_circuit.py  run_circuit_0.py  run_circuit_1.py  run_circuit_2.py  run_circuit_21.py  run_circuit_3.py  run_circuit_4.py  run_circuit_5.py  run_dataset_0.py  run_dataset_1.py
