[project]
name = "qencodervis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "matplotlib>=3.9.2",
    "pennylane>=0.38.0",
    "scikit-learn>=1.5.2",
]

[dependency-groups]
dev = [
    "poethepoet>=0.36.0",
    "ruff>=0.12.8",
]
