[project]
name = "qencodervis"
version = "0.1.0"
description = "Source code of the XQAI-Eyes system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "matplotlib>=3.9.2",
    "pennylane>=0.38.0",
    "pydantic>=2.11.7",
    "scikit-learn>=1.5.2",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "jupyterlab>=4.4.5",
    "poethepoet>=0.36.0",
    "ruff>=0.12.8",
]

[tool.ruff]
extend-exclude = ["client"]
line-length = 100

[tool.ruff.lint]
ignore = ["F401", "F841"]

[tool.poe.tasks.format-js]
cmd = "bunx biome format --write"
cwd = "./client"

[tool.poe.tasks.install-client]
cmd = "bun install"
cwd = "./client"

[tool.poe.tasks.build-client]
cmd = "bun run build"
cwd = "./client"

[tool.poe.tasks.start-client]
cmd = "bun run start"
cwd = "./client"

[tool.poe.tasks.run-server]
cmd = "uv run python app.py"
cwd = "./server"

[tool.poe.tasks.check-js]
cmd = "bunx biome lint --write"
cwd = "./client"

[tool.poe.tasks]
format-python = "uv run ruff format"
format = ["format-python", "format-js"]
check-python = "uv run ruff check"
check = ["check-python", "check-js"]
run-client = ["build-client", "start-client"]
setup-client = ["install-client", "build-client"]
